results/SVCOMP/houdini/log-StringBuilderChars05-2024_03_19_04_42_06.txt
public class StringBuilderChars05 {
  //@ non_null
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures arg == null ==> \result;
  //@ ensures arg == null ==> !\result;
  //@ ensures arg != null ==> \result;
  //@ ensures arg != null ==> !\result;
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    buffer.setCharAt(0, 'H');
    buffer.setCharAt(6, 'T');
    return buffer.toString().equals("HiffBllTe Limited");
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("#$%^&*123");
    f("#$%^#*123");
    f("fsgdhj");
    f("DiffBlue L1mitted");
    f("DiffBlue Limitted");
    f("DiffBllue Limited");
    f("");
  }
}


/home/max/Documents/JMLGPT/tmp/StringBuilderChars05.java:2: error: No modifiers are allowed prior to a lightweight specification case
  //@ non_null
      ^
1 error

public class StringBuilderChars05 {
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures arg == null ==> \result;
  //@ ensures arg == null ==> !\result;
  //@ ensures arg != null ==> \result;
  //@ ensures arg != null ==> !\result;
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    buffer.setCharAt(0, 'H');
    buffer.setCharAt(6, 'T');
    return buffer.toString().equals("HiffBllTe Limited");
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("#$%^&*123");
    f("#$%^#*123");
    f("fsgdhj");
    f("DiffBlue L1mitted");
    f("DiffBlue Limitted");
    f("DiffBllue Limited");
    f("");
  }
}


OpenJML not responding. Aborted.
